# LibJpegOptimize

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/ilouis/me/libjpegoptimize/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/ilouis/me/libjpegoptimize/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/ilouis/me/libjpegoptimize/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
